fixed margin for buttons

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Personal Dashboard</a>
+                  <a class="dropdown-item" href="./personaldashboard.html">Personal Dashboard</a>
                 </li>
               </ul>
             </li>
@@ -98,8 +98,8 @@
           Choose your certification
         </div>
       </div>
-      <div class="row mb-5">
-        <div class="col-3">
+      <div class="row mb-5 text-center">
+        <div class="col-sm-6 col-lg-3 mb-5">
           <a
             class="btn btn-primary btn-lg"
             href="./networkplus.html"
@@ -107,7 +107,7 @@
             >Network+</a
           >
         </div>
-        <div class="col-3">
+        <div class="col-sm-6 col-lg-3 mb-5">
           <a
             class="btn btn-primary btn-lg"
             href="./securityplus.html"
@@ -115,12 +115,12 @@
             >Security+</a
           >
         </div>
-        <div class="col-3">
+        <div class="col-sm-6 col-lg-3 mb-5">
           <a class="btn btn-primary btn-lg" href="./AWS.html" role="button"
             >AWS Cloud Practitioner</a
           >
         </div>
-        <div class="col-3">
+        <div class="col-sm-6 col-lg-3 mb-5">
           <a class="btn btn-primary btn-lg" href="./Azure.html" role="button"
             >Azure Fundamentals</a
           >
