--- a/personaldashboard.html
+++ b/personaldashboard.html
@@ -97,8 +97,8 @@ Your Personal Dashboard
         <div class="col-12 text-center text-primary display-5 mt-5 mb-5">
 Personalization coming soon!        </div>
       </div>
-      <div class="row mb-5">
-        <div class="col-3">
+      <div class="row mb-5 text-center">
+        <div class="col-sm-6 col-lg-3 mb-5">
           <a
             class="btn btn-primary btn-lg"
             href="./networkplus.html"
@@ -106,7 +106,7 @@ Personalization coming soon!        </div>
             >Network+</a
           >
         </div>
-        <div class="col-3">
+        <div class="col-sm-6 col-lg-3 mb-5">
           <a
             class="btn btn-primary btn-lg"
             href="./securityplus.html"
@@ -114,12 +114,12 @@ Personalization coming soon!        </div>
             >Security+</a
           >
         </div>
-        <div class="col-3">
+        <div class="col-sm-6 col-lg-3 mb-5">
           <a class="btn btn-primary btn-lg" href="./AWS.html" role="button"
             >AWS Cloud Practitioner</a
           >
         </div>
-        <div class="col-3">
+        <div class="col-sm-6 col-lg-3 mb-5">
           <a class="btn btn-primary btn-lg" href="./Azure.html" role="button"
             >Azure Fundamentals</a
           >
