New commit to fix about page and button breakpoint

--- a/about.html
+++ b/about.html
@@ -98,13 +98,33 @@
       <hr />
       <div class="row">
         <div class="col-2"></div>
-        <div class="col-8 text-center text-primary display-6 lh-base">
+        <div class="col-8 text-center text-primary display-6 lh-base mb-3">
           My goal is simple. This website will allow people to learn. I hope
           this inspires you to learn more about cybersecurity/technology overall
           and pursue it further. I hope to expand and create something big. This
           website is my first step toward that. I have earned all these
           certifications and I hope to pass on the knowledge to you. Please
           follow my youtube channel!
+        </div>
+        <hr />
+        <div class="text-center text-primary display-6 mt-3 mb-3">
+          Club blogpost
+        </div>
+        <div class="text-primary text-center text-lg-center">
+          Cybersecurity Club (From our school newspaper) The Cybersecurity
+          Club’s president, senior Skylar Shi, gained interest in cybersecurity
+          his sophomore year and then invented the club his junior year. Now, as
+          a senior he hopes the club will go on until after he graduates.
+          “Outside from the practical knowledge that people can take with them,
+          I wanted to spread interest into cybersecurity which is often
+          stereotyped as boring,” Shi said. “But, recently I have been trying to
+          make my clubs lively and even people who aren’t into tech can still
+          have a good time. So my simple goal is to have my interest rub off on
+          other people.” Everyone that attends a meeting will be presented with
+          an introduction to a subject regarding cyber security, a mini lesson
+          on a specific topic, a practical activity and to finish off, a fun
+          game of Kahoot about what the attendees learned. Those activities take
+          place every other Friday, during lunch in room 510.
         </div>
         <div class="col-2"></div>
       </div>
